<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clg_name">

    <fragment
        android:id="@+id/nav_clg_name"
        android:name="com.example.job.ui.Profile.ProfileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_clg_rank"
        android:name="com.example.job.ui.About.AboutFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_clg_detail"
        android:name="com.example.job.ui.Intro.IntroFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_intro" />
</navigation>