<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_clg_name">

    <fragment
        android:id="@+id/nav_clg_name"
        android:name="com.example.job.ui.College_Info.College_Info_Fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_college_info" />

    <fragment
        android:id="@+id/nav_clg_rank"
        android:name="com.example.job.ui.College_Details.CollegeDetailsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_college_details" />

    <fragment
        android:id="@+id/nav_clg_detail"
        android:name="com.example.job.ui.WorkFeatures.Work_Features"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_work_feature" />
</navigation>