<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation5"
    app:startDestination="@+id/navigation_hire_job">

    <fragment
        android:id="@+id/navigation_hire_job"
        android:name="com.example.job.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hire_home" />

    <fragment
        android:id="@+id/navigation_hire_add_post"
        android:name="com.example.job.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_hire_not"
        android:name="com.example.job.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_hire_notifications" />
</navigation>