<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation4"
    app:startDestination="@+id/navigation_hire_job">

    <fragment
        android:id="@+id/navigation_hire_job"
        android:name="com.example.job.ui.home_hire.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hire_home" />

    <fragment android:id="@+id/navigation_hire_browse"
        android:name="com.example.job.ui.BrowseFragment"
        android:label="Browse"
        tools:layout="@layout/fragment_browse" />

    <fragment android:id="@+id/navigation_hire_project"
        android:name="com.example.job.ui.jobbFragment"
        tools:layout="@layout/fragment_jobb"
        android:label="Job">

    </fragment>

    <fragment
        android:id="@+id/navigation_hire_add_post"
        android:name="com.example.job.ui.AddPost.HireAddPostFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_hire_addpost" >

    </fragment>

    <fragment
        android:id="@+id/navigation_hire_not"
        android:name="com.example.job.ui.hire_notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_hire_notifications" />
</navigation>